# NFI-ScanApp-PD

./: .gitignore  .gitmodules  README.md
Core/: .gitignore  CMakeLists.txt  InitModules.bat  premake5.lua
Core/GSplats/: SplatEngine.hpp  SplatRenderSystem.cpp  SplatRenderSystem.hpp
Core/Libraries/include/FreeImage/: FreeImage.h
Core/Libraries/lib/: FreeImage.lib  FreeImagePlus.lib  assimp-vc143-mt.lib  assimp-vc143-mtd.lib  ceres.lib  colmap_feature_types.lib  colmap_lsd.lib  colmap_vlfeat.lib  glog.lib  sqlite3.lib
Core/RayTracing/: MarkerManager.cpp  MarkerManager.h  PickingFramebuffer.cpp  PickingFramebuffer.hpp  PickingRenderSystem.cpp  PickingRenderSystem.hpp  PickingSystem.cpp  PickingSystem.h
Core/SfM/: CameraSystem.cpp  CameraSystem.hpp  CvUtils.cpp  CvUtils.hpp  DSU.hpp  SfM.cpp  SfM.hpp  SfMFunctions.cpp  Test.cpp  Test.hpp  ns.hpp
Core/TestApp/: App.cpp  SfMApp.cpp  compile_shaders.bat  run_colmap_sparse.bat
Core/TestApp/models/: markers.txt  sparse.ply
Core/TestApp/shaders/: index_shader.frag  index_shader.frag.spv  index_shader.vert  index_shader.vert.spv  point_cloud_shader.vert  point_cloud_shader.vert.spv  simple_shader.vert  simple_shader.vert.spv
Core/Text/: Font.hpp  FontManager.cpp  FontManager.hpp  Glyph.cpp  Glyph.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureAtlas.cpp  TextureAtlas.hpp
Core/Text/fonts/Roboto-SemiBold/: atlas.json
Core/minmap/: Database.cpp  Database.hpp  Feature.cpp  Feature.hpp  Image.cpp  Image.hpp  MVS.cpp  MVS.hpp  MapModel.cpp  MapModel.hpp  Model.cpp  Model.hpp  SfM.cpp  SfM.hpp  VocabTree.cpp  VocabTree.hpp  minmap.hpp  minmap_defs.hpp
Core/minmap-core/: include_tree.txt  include_tree_parser.py
Core/minmap-core/controllers/: bundle_adjustment.h  feature_extraction.cc  feature_matching.cc  feature_matching.h  feature_matching_utils.cc  feature_matching_utils.h  hierarchical_pipeline.cc  hierarchical_pipeline.h  image_reader.cc  image_reader.h  incremental_pipeline.cc  option_manager.cc  option_manager.h
Core/minmap-core/estimators/: absolute_pose.cc  absolute_pose.h  affine_transform.cc  alignment.h  bundle_adjustment.cc  bundle_adjustment.h  coordinate_frame.cc  coordinate_frame.h  cost_functions.h  covariance.h  essential_matrix.cc  euclidean_transform.h  generalized_absolute_pose.cc  generalized_absolute_pose.h  generalized_pose.h  generalized_relative_pose.cc  generalized_relative_pose.h  translation_transform.h  two_view_geometry.cc  two_view_geometry.h
Core/minmap-core/feature/: extractor.h  index.cc  index.h  pairing.cc  pairing.h  sift.cc  types.cc  utils.cc  utils.h
Core/minmap-core/geometry/: gps.h  homography_matrix.cc  homography_matrix.h  pose.h  pose_prior.h  rigid3_matchers.h  sim3.cc  sim3_matchers.h  triangulation.cc
Core/minmap-core/image/: line.cc  line.h  undistortion.cc  undistortion.h  warp.h
Core/minmap-core/math/: graph_cut.cc  graph_cut.h  math.h
Core/minmap-core/optim/: combination_sampler.cc  least_absolute_deviations.h  ransac.h  sprt.cc  support_measurement.cc
Core/minmap-core/retrieval/: geometry.h  inverted_index.h  visual_index.cc  visual_index.h  vote_and_verify.cc  vote_and_verify.h
Core/minmap-core/scene/: camera.cc  correspondence_graph.h  database.h  database_cache.cc  frame.cc  frame.h  image.h  point3d.cc  point3d.h  projection.cc  projection.h  reconstruction.h  reconstruction_io.h  reconstruction_io_binary.cc  reconstruction_io_text.h  reconstruction_manager.cc  reconstruction_manager.h  rig.cc  rig.h  scene_clustering.cc  scene_clustering.h  track.h  two_view_geometry.cc  visibility_pyramid.cc
Core/minmap-core/sensor/: bitmap.cc  database.h  models.h  rig.h
Core/minmap-core/sfm/: incremental_mapper_impl.cc  incremental_triangulator.cc  observation_manager.cc
Core/minmap-core/util/: cache.h  endian.cc  endian.h  enum_utils.h  file.cc  file.h  logging.cc  logging.h  ply.cc  poselib_sturm.h  sqlite3_utils.h  string.cc  threading.cc  timer.cc  types.h
Core/minmap/colmap/controllers/: automatic_reconstruction.cc  automatic_reconstruction.h  bundle_adjustment.cc  bundle_adjustment.h  feature_extraction.cc  feature_extraction.h  feature_matching.cc  feature_matching.h  feature_matching_utils.cc  feature_matching_utils.h  hierarchical_pipeline.cc  hierarchical_pipeline.h  image_reader.cc  image_reader.h  incremental_pipeline.cc  incremental_pipeline.h  option_manager.cc  option_manager.h
Core/minmap/colmap/estimators/: absolute_pose.cc  affine_transform.h  alignment.cc  coordinate_frame.cc  covariance.cc  essential_matrix.h  fundamental_matrix.cc  fundamental_matrix.h  generalized_absolute_pose.cc  generalized_pose.cc  homography_matrix.cc  homography_matrix.h  triangulation.h  utils.cc  utils.h
Core/minmap/colmap/feature/: matcher.cc  matcher.h  sift.cc  sift.h  types.h  utils.cc
Core/minmap/colmap/geometry/: gps.cc  gps.h  normalization.cc  pose.cc  pose_prior.cc  rigid3.cc  rigid3.h  sim3.h  triangulation.h
Core/minmap/colmap/image/: warp.cc
Core/minmap/colmap/math/: math.h  matrix.h  polynomial.cc  polynomial.h  random.cc  random.h
Core/minmap/colmap/optim/: combination_sampler.h  least_absolute_deviations.cc  loransac.h  progressive_sampler.cc  progressive_sampler.h  sampler.h
Core/minmap/colmap/retrieval/: geometry.cc  inverted_file.h  inverted_file_entry.h  visual_index.h
Core/minmap/colmap/scene/: camera.h  correspondence_graph.cc  database.cc  database.h  database_cache.h  frame.h  image.cc  point2d.h  reconstruction.cc  reconstruction_io.cc  reconstruction_io_binary.h  reconstruction_io_text.cc  reconstruction_io_utils.cc  reconstruction_io_utils.h  rig.h  synthetic.cc  synthetic.h  track.cc  two_view_geometry.h  visibility_pyramid.h
Core/minmap/colmap/sensor/: bitmap.cc  bitmap.h  database.cc  models.h  rig.cc  specs.cc
Core/minmap/colmap/sfm/: incremental_mapper.cc  incremental_mapper.h  incremental_triangulator.h  observation_manager.h
Core/minmap/colmap/util/: base_controller.cc  controller_thread.h  eigen_matchers.h  logging.h  misc.cc  opengl_utils.cc  opengl_utils.h  ply.h  threading.h
UI/: settings.gradle.kts
(+346 files in other folders)
